# FastAPI_Template

./: .env.dist  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
alembic/: env.py  script.py.mako
alembic/versions/: 15899b7278a1_v0_1.py  984833548e72_.py  cbac335c1d0e_v1.py  f0d17bffc1a7_.py
app/: __init__.py  __main__.py
app/api/: __init__.py  depends.py  deps.py
app/api/v1/: __init__.py
app/api/v1/jwt/: __init__.py  auth.py
app/api/v1/token/: __init__.py  auth.py  pair.py
app/api/v1/user/: __init__.py  auth.py  create.py  delete.py  retreive.py  update.py
app/core/: __init__.py  database.py  db.py  security.py  service.py  settings.py  types.py
app/models/: __init__.py  base.py  base_id.py  jwt.py  token.py  user.py
app/repositories/: __init__.py  abc.py  abstract.py  user.py
app/service/: __init__.py  service.py
app/service/services/: __init__.py  user.py
app/services/: __init__.py  jwt.py
app/types/: __init__.py  unixepoch.py
